identified issues with the current approach

--- a/notebooks/classy.ipynb
+++ b/notebooks/classy.ipynb
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import singledispatch, update_wrapper\n",
-    "from dataclasses import dataclass"
+    "from dataclasses import dataclass\n",
+    "from typing import Callable"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,18 +96,17 @@
      "output_type": "stream",
      "text": [
       "Hello, world!\n",
-      "Hello again, example\n",
       "Hello again, example\n"
      ]
     }
    ],
    "source": [
-    "def method(func):\n",
+    "def method[R, **P](func: Callable[P, R]) -> Callable[P, R]:\n",
     "    dispatcher = singledispatch(func)\n",
-    "    def wrapper(*args, **kwargs):\n",
+    "    def wrapper(*args: P.args, **kwargs: P.kwargs):\n",
     "        return dispatcher(*args, **kwargs)\n",
     "    \n",
-    "    wrapper.overload = dispatcher.register\n",
+    "    wrapper.override = dispatcher.register\n",
     "    update_wrapper(wrapper, func)\n",
     "\n",
     "    return wrapper\n",
@@ -118,7 +118,7 @@
     "    raise NotImplementedError\n",
     "\n",
     "# Register a function for a specific type\n",
-    "@greet.overload\n",
+    "@greet.override\n",
     "def _greet_str(instance: str) -> str:\n",
     "    return 'Hello, {0}!'.format(instance)\n",
     "\n",
@@ -128,15 +128,14 @@
     "    name: str\n",
     "\n",
     "# Register a function for a custom type\n",
-    "@greet.overload\n",
+    "@greet.override\n",
     "def _greet_myuser(instance: MyUser) -> str:\n",
     "    return 'Hello again, {0}'.format(instance.name)\n",
     "\n",
     "# Use the generic function\n",
     "print(greet('world'))\n",
     "print(greet(MyUser(name='example')))\n",
-    "\n",
-    "x = MyUser"
+    "print(greet(123)) # TODO we want the typechecker to complain when calling an unsupported instance!\n"
    ]
   }
  ],
